--- a/simple-pwa/tsconfig.json
+++ b/simple-pwa/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "types": [
+      "vite-plugin-pwa/client"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
 
